examples/test/testpolicy15450.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy15450
  namespace: namespace421
spec:
  podSelector:
    matchLabels:
      key4: value7
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key42: value5
          key23: value46
          key47: value28
      podSelector:
        matchLabels:
          key3: value8
